# formal-uav

./: .gitignore  Dreach.hs  Logic.hs  Parser.hs  README.md  SMTSolver.hs  UAV.hs  scratch  stack.yaml  testresponse  uav.cabal  uav.dfy  uav.drh  uav.hs  uav.smt  uav.smt2  uav_dreal.smt2  uav_dreal_complete.smt2
.stack-work/install/x86_64-linux/lts-9.14/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  MissingH-1.4.0.1-4I5T4TbNA9RIo1FM0FgAP  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  uav-0.1.0.0  (+12 more)
config/: solver.cfg  uav.config
dReal/include/dreal/: dreal_config.h
dReal/lib/dreal/: dreal-config-version.cmake  dreal-config.cmake  libClp.la  libClpSolver.la  libCoinUtils.la  libOsi.la  libOsiClp.la  libOsiCommonTests.la  libadept.la  libcapd.la  libglpk.la  libnlopt.la  libprim.la
dReal/lib/pkgconfig/: dreal.pc
smt/: uav_dreal_complete.smt2  uav_dreal_multiple_sensors_template.smt2  uav_dreal_parameter_complete.smt2  uav_dreal_parameter_constant_template.smt2  uav_dreal_parameter_template.smt2  uav_dreal_template.smt2
smt/easy_multiple_sensors/: counterexample_step_complete.smt2  counterexample_step_template.smt2  parameter_step_complete.smt2  parameter_step_constant_template.smt2  parameter_step_template.smt2
src/: CodeGen.hs  Logic.hs  Parser.hs  Pretty.hs  SMTSolver.hs  UAV.hs  Utils.hs
test/: average.sh  benchmark.sh  evaluation.md  spec_sensors_2  spec_sensors_3  testout  testspec  testspec_complete.smt2  testspec_parameter_complete.smt2  testspec_parameter_constant_template.smt2  testspec_parameter_template.smt2  testspec_template.smt2
